--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!-- app-utilisateurs -->
-<app-utilisateurs></app-utilisateurs>
+<!-- <app-list-articles></app-list-articles> -->
+<router-outlet></router-outlet>
+
 
