--- a/src/app/articles/details-articles/details-articles.component.html
+++ b/src/app/articles/details-articles/details-articles.component.html
@@ -1,1 +1,12 @@
-<p>details-articles works!</p>
+<!-- article-details.component.html -->
+<div class="container">
+  <h2>Détails de l'article</h2>
+  <div *ngIf="article">
+    <h3>Titre:{{ article.title }}</h3>
+    <p>{{ article.body }}</p>
+    <button [routerLink]="['/articles']" type="button">retour</button>
+  </div>
+
+</div>
+
+
