--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- app-utilisateurs -->
-<app-utilisateurs></app-utilisateurs>
-
+<!-- <app-details-articles></app-details-articles> -->
+<!-- <app-comment></app-comment> -->
+<app-list-articles></app-list-articles>
