--- a/src/app/articles/details-articles/details-articles.component.html
+++ b/src/app/articles/details-articles/details-articles.component.html
@@ -1,5 +1,5 @@
 <!-- article-details.component.html -->
-<div class="container">
+<!-- <div class="container">
   <h2>Détails de l'article</h2>
   <div *ngIf="article">
     <h3>Titre:{{ article.title }}</h3>
@@ -7,6 +7,63 @@
     <button [routerLink]="['/articles']" type="button">retour</button>
   </div>
 
+</div> -->
+
+<div class="container py-3">
+  <div class="title h1 text-center">Details de l'article</div>
+  <!-- Card Start -->
+  <div class="card" *ngIf="article">
+    <div class="row ">
+
+      <div class="col-md-7 px-3">
+        <div class="card-block px-6 mt-4">
+          <p class="card-text">
+            {{article.title}}
+          </p>
+          <p class="card-text">{{article.body}}</p>
+          <br>
+          <button [routerLink]="['/articles']" type="button" >retour</button>
+        </div>
+      </div>
+      <!-- Carousel start -->
+      <div class="col-md-5">
+        <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#CarouselTest" data-slide-to="0" class="active"></li>
+            <li data-target="#CarouselTest" data-slide-to="1"></li>
+            <li data-target="#CarouselTest" data-slide-to="2"></li>
+
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block" src="https://img.freepik.com/vecteurs-libre/composition-realiste-maquillage_1284-18448.jpg?size=626&ext=jpg&ga=GA1.1.359486737.1694125754&semt=sph" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block" src="https://img.freepik.com/vecteurs-libre/composition-realiste-maquillage_1284-18448.jpg?size=626&ext=jpg&ga=GA1.1.359486737.1694125754&semt=sph" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block" src="https://img.freepik.com/vecteurs-libre/composition-realiste-maquillage_1284-18448.jpg?size=626&ext=jpg&ga=GA1.1.359486737.1694125754&semt=sph" alt="">
+            </div>
+            <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#CarouselTest" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+      <!-- End of carousel -->
+    </div>
+  </div>
+  <!-- End of card -->
+
 </div>
+
+
+<br>
+<br>
 
 
