--- a/src/app/articles/list-articles/list-articles.component.css
+++ b/src/app/articles/list-articles/list-articles.component.css
@@ -1,7 +1,268 @@
 #cartes
 {
  display: grid;
- grid-template-columns: auto auto   ;
+ grid-template-columns: auto auto;
  gap:20px 20px  ;
 }
+@media  sreen and (max-width:500px) {
+  #cartes {
+      display: grid;
+      grid-template-columns: auto ;
 
+    }
+
+
+}
+
+/* css jolie card  */
+@media sreen and (max-width:500px) {
+  .cartes {
+    display: grid;
+    grid-template-columns: auto;
+
+  }
+
+
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+* {
+  /* padding: 0;
+  margin: 0; */
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif
+}
+
+body {
+  margin-top: 30px;
+  background-color: #eee;
+}
+.cartes{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 30px 30px;
+}
+/* .containercartes {
+  min-height: 100vh;
+  /* padding: 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center
+} */
+
+p {
+  margin: 0px
+}
+
+.card {
+  width: 280px;
+  height: 600px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background: #fff;
+  transition: all 0.5s ease;
+  cursor: pointer;
+  user-select: none;
+  z-index: 10;
+  overflow: hidden
+}
+.bonton{
+  margin-top: 2%;
+  /* border: 2px solid red; */
+}
+
+.card .backgroundEffect {
+  bottom: 0;
+  height: 0px;
+  width: 100%
+}
+
+.card:hover {
+  color: #fff;
+  transform: scale(1.025);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 5px 10px
+}
+
+.card:hover .backgroundEffect {
+  bottom: 0;
+  height: 320px;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+  background: #1b9ce3;
+  animation: popBackground 0.3s ease-in
+}
+
+@keyframes popBackground {
+  0% {
+    height: 20px;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%
+  }
+
+  50% {
+    height: 80px;
+    border-top-left-radius: 75%;
+    border-top-right-radius: 75%
+  }
+
+  75% {
+    height: 160px;
+    border-top-left-radius: 85%;
+    border-top-right-radius: 85%
+  }
+
+  100% {
+    height: 320px;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%
+  }
+}
+
+.card .pic {
+  position: relative
+}
+
+.card .pic img {
+  width: 100%;
+  height: 280px;
+  object-fit: cover
+}
+
+.card .date {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 70px;
+  background-color: #1b9ce3;
+  color: white;
+  position: absolute;
+  bottom: 0px;
+  transition: all ease
+}
+
+.card .date .day {
+  font-size: 14px;
+  font-weight: 600
+}
+
+.card .date .month,
+.card .date .year {
+  font-size: 10px
+}
+
+.card .text-muted {
+  font-size: 12px
+}
+
+.card:hover .text-muted {
+  color: #fff !important
+}
+
+.card .content {
+  padding: 0 20px
+}
+
+.card .content .btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 10px;
+  background-color: #1b9ce3;
+  border-radius: 25px;
+  font-size: 12px;
+  border: none
+}
+.supprime{
+  background-color: #fff !important;
+  border: 2px solid red !important;
+}
+.modifie{
+  background-color: #fff !important;
+  border: 2px solid gray !important;
+}
+
+.card:hover .content .btn {
+  background: #fff;
+  color: #1b9ce3;
+  box-shadow: #0000001a 0px 3px 5px
+}
+
+.card .content .btn .fas {
+  font-size: 10px;
+  padding-left: 5px
+}
+
+.card .content .foot .admin {
+  color: #1b9ce3;
+  font-size: 12px
+}
+
+.card:hover .content .foot .admin {
+  color: #fff
+}
+
+.card .content .foot .icon {
+  font-size: 12px
+}
+/* pagination */
+.btnColor {
+  background-color:#D1B3D7;
+  color: #fff;
+}
+/* recherche */
+
+
+
+.height {
+
+  height: 100vh;
+}
+
+.form {
+
+  position: relative;
+}
+
+.form .fa-search {
+
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: #9ca3af;
+
+}
+
+.form span {
+
+  position: absolute;
+  right: 17px;
+  top: 13px;
+  padding: 2px;
+  border-left: 1px solid #d1d5db;
+
+}
+
+.left-pan {
+  padding-left: 7px;
+}
+
+.left-pan i {
+
+  padding-left: 10px;
+}
+
+.form-input {
+
+  height: 55px;
+  text-indent: 33px;
+  border-radius: 10px;
+}
+
+.form-input:focus {
+
+  box-shadow: none;
+  border: none;
+}
