--- a/src/app/articles/list-articles/list-articles.component.html
+++ b/src/app/articles/list-articles/list-articles.component.html
@@ -1,27 +1,21 @@
-<div class="mb-3">
-  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-custom rounded-3 shadow-sm" id="pillNav2" role="tablist"
-    style="--bs-nav-link-color: #F05941; --bs-nav-pills-link-active-color: #F05941; --bs-nav-pills-link-active-bg: black;">
-    <li class="nav-item shadow-md" role="presentation">
-      <button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab"
-        aria-selected="true">Home</button>
-    </li>
-    <!-- <li class="nav-item" role="presentation">
-      <button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
-        aria-selected="false"  data-bs-toggle="modal"
-        data-bs-target="#exampleModal">Ajouter un article</button>
-    </li> -->
-    <li class="nav-item" role="presentation">
-      <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
-        aria-selected="false">Deconnexion</button>
-    </li>
-  </ul>
+<h2 class="text-center mt-4">La liste des articles</h2>
+
+<div class="container d-flex justify-content-between mt-3 ">
+  <div class="ms-5">
+    <button type="button" class="btn btn-primary btn-lg mb-3 p-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Ajouter
+      Article</button>
+  </div>
 
 </div>
-<button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Ajouter
-  Article</button>
-<!-- [routerLink]="['/articlesAjout/add']" -->
- <div class="container" id="cartes">
 
+<div class=" container input-group mb-3">
+  <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)"
+    [(ngModel)]="searchTerm" (input)="search()">
+  <span class="input-group-text bg-primary"><i class="bi bi-search"></i></span>
+</div>
+
+
+ <!-- <div class="container" id="cartes">
   <div class="card mb-3  article" *ngFor="let item of articles ">
     <div class="row g-0 card-body">
       <div class="col-12 col-md-6">
@@ -30,15 +24,15 @@
       <div class="col-12 col-md-6 h-100">
         <div class="card-body">
           <h5 class="card-title">Titre:{{item.title}}</h5>
-          <p class="card-text">{{item.body}}</p>
-          <button type="button">Modifier</button>
-          <button type="button" >Supprimer</button>
-          <button type="button" [routerLink]="['/articles', item.id]">Details</button>
+          <p class="card-text" >{{item.body}}</p>
+          <button type="button" >Modifier</button>
+          <button type="button" (click)="supprimerArticle(item.id)" class="ms-3">Supprimer</button>
+          <button type="button"class="mt-3" [routerLink]="['/articles', item.id]">Details</button>
         </div>
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- ajouter article  -->
 <!-- Modal -->
@@ -46,62 +40,113 @@
 
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+      <div class="modal-header ms-3">
+        <h1 class="modal-title fs-5 " id="exampleModalLabel">Ajout article</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <!-- <div *ngIf="isAjoutModalOuvert"> -->
         <form (ngSubmit)="ajouterArticle()">
-          <div class="mb-3">
+          <div class="mb-3 ms-3">
             <label for="titre">Titre :</label>
             <input type="text" id="titre" name="titre" [(ngModel)]="newArticle.title" class="form-control" required />
           </div>
-          <div class="mb-3">
+          <div class="mb-3 ms-3">
             <label for="contenu">Contenu :</label>
             <textarea id="contenu" name="contenu" [(ngModel)]="newArticle.body" class="form-control" required></textarea>
           </div>
-          <!-- <div class="mb-3">
-            <label for="contenu">Image :</label>
-            <textarea id="image" name="image" [(ngModel)]="newArticle.image" class="form-control" required></textarea>
-          </div> -->
-          <button type="submit" class="btn btn-success">Ajouter</button>
-          <button type="button" class="btn btn-secondary">Fermer</button>
+          <div class="mb-3">
+            <button type="submit" class="btn btn-success ms-2">Ajouter</button>
+            <button type="button" class="btn btn-secondary ms-4" data-bs-dismiss="modal" >Fermer</button>
+          </div>
         </form>
       </div>
       </div>
-
     </div>
-  <!-- </div> -->
-<!-- </div> -->
 
+<!-- card jolie -->
+<div class="container containercartes ms-auto">
+  <div class="cartes ">
+    <div class="card border-0 me-lg-4 mb-lg-0 mb-4" *ngFor="let item of getArticlesPage() ">
+      <div class="backgroundEffect"></div>
+      <div class="pic">
+        <img class=""
+          src="https://img.freepik.com/vecteurs-libre/composition-realiste-maquillage_1284-18448.jpg?size=626&ext=jpg&ga=GA1.1.359486737.1694125754&semt=sph"
+          alt="">
+        <div class="date"> <span class="day">20</span> <span class="month">June</span> <span class="year">2023</span>
+        </div>
+      </div>
+      <div class="content">
+        <p class="h-1 mt-4">{{item.title}}</p>
+        <p class="text-muted mt-3">{{item.body}}</p>
+        <div class="bonton">
+          <div class="d-flex align-items-center justify-content-between mt-3 pb-3">
+            <div class="btn btn-primary" [routerLink]="['/articles', item.id]">Details<span class="fas fa-arrow-right"></span>
+            </div>
+            <div class="d-flex align-items-center justify-content-center foot">
+              <p class="admin">Commentaires</p>
+              <p class="ps-3 icon text-muted"><span class="fas fa-comment-alt pe-1"></span>4</p>
+            </div>
 
+          </div>
+          <div class="d-flex align-items-center justify-content-between mt-3 pb-3">
+            <button type="button" class="btn  btn-outline-secondary modifie" data-bs-toggle="modal" data-bs-target="#ModifArticle" (click)="chargerInfosArticle(item)">Modifier<span
+                class="fas fa-arrow-right"></span></button>
+            <button type="button" class="btn btn-outline-danger supprime" (click)="supprimerArticle(item.id)">Supprimer<span
+                class="fas fa-arrow-right"></span></button>
+          </div>
 
-<!-- modal ajout -->
-<!-- Modal -->
-<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<!-- pagination -->
+<!-- <div class="container d-flex justify-content-center mb-4">
+  <button type="button" class="btn btn-primary p-1 me-3" (click)="onPageChange(currentPage - 1)" [disabled]="currentPage === 1">Précédent</button>
+  <span>Page {{ currentPage }}</span>
+  <button type="button" class="btn btn-primary p-1 ms-3" (click)="onPageChange(currentPage + 1)">Suivant</button>
+</div> -->
+<!-- pour la pagination -->
+<div class="d-flex justify-content-center my-5">
+  <button class="btn btnColor me-2" [disabled]="pageActuelle === 1" (click)="pageActuelle = pageActuelle - 1">
+    Précédent
+  </button>
+  <button class="btn btnColor ms-2" *ngFor="let page of pages" (click)="pageActuelle = page">
+    {{ page }}
+  </button>
+  <button class="btn btnColor ms-2" [disabled]="pageActuelle === totalPages" (click)="pageActuelle = pageActuelle + 1">
+    Suivant
+  </button>
+</div>
+
+<!-- modif article -->
+
+<div class="modal fade" id="ModifArticle" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Ajout article</h1>
+      <div class="modal-header ms-3">
+        <h1 class="modal-title fs-5 " id="exampleModalLabel" >Modifie article</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-      <form (ngSubmit)="onSubmit()">
-        <div class="mb-3">
-          <label for="title">Titre:</label>
-          <input type="text" id="title" name="title" [(ngModel)]="newArticle.title" required>
+      <form >
+        <div class="mb-3 ms-3">
+          <label for="titre">Titre :</label>
+          <input type="text" id="titre" name="titre" [(ngModel)]="newArticle.title" class="form-control" required />
+        </div>
+        <div class="mb-3 ms-3">
+          <label for="contenu">Contenu :</label>
+          <textarea id="contenu" name="contenu" [(ngModel)]="newArticle.body" class="form-control" required></textarea>
         </div>
         <div class="mb-3">
-          <label for="body">Contenu:</label>
-          <textarea id="body" name="body" [(ngModel)]="newArticle.body" required></textarea>
+          <!-- <button type="submit">Enregistrer les modifications</button> -->
+          <button type="submit" class="btn btn-success ms-2">Enregistrer les modifications</button>
+          <button type="button" class="btn btn-secondary ms-4" data-bs-dismiss="modal">Fermer</button>
         </div>
-
       </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary" >Valider</button>
-      </div>
     </div>
   </div>
-</div>-->
+</div>
+
